Add tags to Post-Its

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Post-It Online</title>
+  <!-- Stylesheet for react-select -->
+  <link rel="stylesheet" href="https://unpkg.com/react-select/dist/react-select.css">
   <!-- build:css -->
   <link rel="stylesheet" type="text/css" href="./styles.css">
   <!-- endbuild -->
